Compilers construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/113_missing_multireturn.xi
f():int,int
{
}
//@PRACOWNIA
//@should_not_typecheck
